chore: fix package name to valid npm format

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleo-&-binga-beach-brothers-palawan",
+ "name": "bingabeach-palawan",
   "private": true,
   "version": "0.0.0",
   "type": "module",
