refactor: Update project name and AI Studio link
Updates the project name in `package.json` to accurately reflect the application's title. Also, modifies the AI Studio link in `README.md` to use the standard `ai.studio` domain.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "name": "bingabeach-palawan",
+  "name": "cleo-&-binga-beach-brothers-palawan",
   "private": true,
   "version": "0.0.0",
   "type": "module",
