refactor: Update project structure and dependencies
This commit introduces a significant refactor to the project's structure and dependencies.

Key changes include:
- Renaming the project to "palawan-tourism-ecosystem" in `package.json`.
- Simplifying build and start scripts, indicating a static project.
- Replacing `@supabase/supabase-js` with `@google/genai` for potential AI integration.
- Updating TypeScript and Vite configurations for a more streamlined setup.
- Migrating the main application logic and styles to a new `src` directory.
- Introducing a `MainLayout` and separating `HomePage` and `BlogPage` components.
- Updating the main logo path in `index.html` and adding a manifest link.
- Adding a `.gitignore` file for better local development practices.

--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "cleo-&-binga-beach-brothers-palawan",
+  "name": "palawan-tourism-ecosystem",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
+  "description": "A landing page for the comprehensive business plan of the Palawan Integrated Tourism, Investment & Infrastructure Ecosystem.",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start": "vite preview --port $PORT"
+    "dev": "echo 'Run development server using a static file server.'",
+    "build": "echo 'No build step required for this static project.'",
+    "start": "echo 'Serve the root directory with a static file server.'"
   },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "recharts": "^2.12.7",
-    "@supabase/supabase-js": "^2.39.0"
+    "@google/genai": "^1.19.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "typescript": "^5.5.3"
   }
 }
