--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "description": "A landing page for the comprehensive business plan of the Palawan Integrated Tourism, Investment & Infrastructure Ecosystem.",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "echo 'Run development server using a static file server.'",
+    "build": "echo 'No build step required for this static project.'",
+    "start": "echo 'Serve the root directory with a static file server.'"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -15,8 +15,6 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.5.3"
