--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "version": "0.1.0",
   "description": "A landing page for the comprehensive business plan of the Palawan Integrated Tourism, Investment & Infrastructure Ecosystem.",
   "scripts": {
-    "build": "node -e \"const {execSync}=require('child_process');const fs=require('fs');execSync('rm -rf dist');fs.mkdirSync('dist',{recursive:true});const hasPublic=fs.existsSync('public')&&fs.statSync('public').isDirectory();const src=hasPublic?'public':'.';execSync(`bash -lc \\\"shopt -s dotglob nullglob && cp -R ${src}/* dist/\\\"`);execSync('rm -rf dist/node_modules dist/dist dist/.git dist/.github || true');console.log('Static build created in dist/');\"",
-    "start": "npx http-server -p 3000 dist || echo \"Use any static server locally if needed\""
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview --port 3000"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.0"
+  },
   "engines": {
     "node": ">=18"
   }
